# fetch-bib

./: .gitignore  FAQ.md  LICENSE  README.md  comparison.md  example_gs.bib  example_official.bib  example_s2.bib  example_ss.bib  paper_sources.py  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: make-bib.md
.claude/skills/fetch-bib/: SKILL.md
.claude/skills/fetch-bib/evals/: evals.json
.claude/skills/fetch-bib/scripts/: dblp_local.py  paper_sources.py
.claude/skills/make-bib/: .gitignore  SKILL.md  citation-guide.md
.claude/skills/make-bib/scripts/: dblp_local.py  paper_sources.py
.github/workflows/: ci.yml
bibtools/: __init__.py  cli.py  fetcher.py  fixer.py  generator.py  logging.py  models.py  parser.py  rate_limiter.py  resolver.py  semantic_scholar.py  utils.py  venue_aliases.py  verifier.py
docs/: RELEASING.md  demo-README.md  demo-verify-scenario.md  demo-verify.cast  references-after.bib  references-before.bib
docs/demos/: demo-README.md  demo-streamingllm-scenario.md  demo-streamingllm.cast  demo-verify-scenario.md  demo-verify.cast
examples/: example_gs.bib  example_official.bib
tests/: conftest.py  test_cli.py  test_generator.py  test_models.py  test_parser.py  test_rate_limiter.py  test_semantic_scholar.py  test_verifier.py
