[project]
name = "bibtools"
dynamic = ["version"]
description = "CLI tool to verify and generate bibtex entries using Semantic Scholar API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bibtexparser>=1.4.0",
    "httpx[http2]>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
    "arxiv>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.8.0",
]

[project.scripts]
bibtools = "bibtools.cli:app"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "bibtools/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:bibtexparser.*:",
    "ignore::DeprecationWarning:pyparsing.*:",
]

[tool.ruff]
line-length = 119
